[tool.poetry]
name = "kai"
version = "0.1.0"
description = "voice assistant"
authors = ["magneum"]
license = "Apache License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
feedparser = "^6.0.10"
nltk = "^3.8.1"
pydub = "^0.25.1"
flask = "^2.2.3"
pyaudio = "^0.2.13"
pyttsx3 = "^2.90"
urllib3 = "^1.26.15"
termcolor = "^2.2.0"
python-vlc = "^3.0.18121"
chatterbot = "1.0.2"
pvporcupine = "^2.1.4"
speechrecognition = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
