[tool.poetry]
name = "knowledge ai"
version = "1.0.0"
description = "AI Voice Assistant wit OpenAI Support"
authors = ["magneum"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nltk = "3.8.1"
pydub = "0.25.1"
flask = "2.2.3"
pyaudio = "0.2.13"
pyttsx3 = "2.90"
urllib3 = "1.26.15"
termcolor = "2.2.0"
python-vlc = "3.0.18121"
pvporcupine = "2.1.4"
speechrecognition = "3.10.0"
simpleaudio = "1.0.4"
bs4 = "0.0.1"
waitress = "2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
