[tool.poetry]
name = "miles"
version = "1.0.0"
description = "AI Voice Assistant with OpenAI Support - Your Personal Assistant"
authors = ["magneum"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
wave = "*"
bs4 = "*"
nltk = "*"
flask = "*"
pydub = "*"
openai = "*"
pygame = "*"
pyttsx3 = "*"
pyaudio = "*"
urllib3 = "*"
waitress = "*"
wikipedia = "*"
termcolor = "*"
python-vlc = "*"
pvporcupine = "*"
simpleaudio = "*"
python-dotenv = "*"
SpeechRecognition = "*"
google-cloud-translate = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
